@startuml

title __APP's Class Diagram__\n

  package com.example.filmbase {
    class BuildConfig {
    }
  }
  

  package com.example.filmbase {
    class ExampleInstrumentedTest {
    }
  }
  

  package com.example.filmbase {
    class MainActivity {
    }
  }
  

  package com.example.filmbase {
    class MovieActionsSeen {
    }
  }
  

  package com.example.filmbase {
    class MovieActionsWant {
    }
  }
  

  package com.example.filmbase {
    class MovieDBHelper {
    }
  }
  

  package com.example.filmbase {
    class MoviesSeen {
    }
  }
  

  package com.example.filmbase {
    class MoviesWant {
    }
  }
  

  package com.example.filmbase {
    class RandomActivity {
    }
  }
  

  package com.example.filmbase {
    class SearchActivity {
    }
  }
  

  package com.example.filmbase {
    class SeenActivity {
    }
  }
  

  package com.example.filmbase {
    class SeenInfoActivity {
    }
  }
  

  package com.example.filmbase {
    class WantActivity {
    }
  }
  

  package com.example.filmbase {
    class WantInfoActivity {
    }
  }
  

  package com.example.filmbase {
    class WantInfoEditActivity {
    }
  }
  

  MainActivity -up-|> OnClickListener
  MainActivity -up-|> AppCompatActivity
  MovieActionsSeen o-- MovieDBHelper : movieDBHelper
  MovieActionsWant o-- MovieDBHelper : movieDBHelper
  MovieDBHelper -up-|> SQLiteOpenHelper
  RandomActivity -up-|> OnClickListener
  RandomActivity -up-|> AppCompatActivity
  SearchActivity -up-|> OnClickListener
  SearchActivity -up-|> AppCompatActivity
  SeenActivity -up-|> OnClickListener
  SeenActivity -up-|> AppCompatActivity
  SeenInfoActivity -up-|> OnClickListener
  SeenInfoActivity -up-|> AppCompatActivity
  WantActivity -up-|> OnClickListener
  WantActivity -up-|> AppCompatActivity
  WantInfoActivity -up-|> OnClickListener
  WantInfoActivity -up-|> AppCompatActivity
  WantInfoEditActivity -up-|> OnClickListener
  WantInfoEditActivity -up-|> AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
